Start to add styling for selector .one Fixed a few div locations to properly wrap classes and container. Starting to format and configure the top-left text so it lays out properly.

--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,17 @@ a {
     color: #E5E7EB;
     font-size: 18px;
 }
+
+.one {
+    display: flex;
+    flex-direction: column;
+}
+
+.top-left {
+    width: 400px;
+    padding: 16px;
+}
+
+.img {
+
+}
